--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -2,7 +2,9 @@
 
 .imgCadastroPessoa{
     display: flex;
-    align-items: center;
+    align-content: center;
+    margin: 0 auto;
+    size: 35px;
 }
 
 .container-cadastro{
