--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -44,12 +44,13 @@ label {
 .input {
   padding: 10px;
   font-size: 16px;
-  border: none;
-  border-radius: 4px;
+  border: 1.5px solid lightgrey;
+  border-radius: 50px;
   background-color: white;
   color: #333;
   width: 200px;
   outline: none;
+
 }
 
 .input:focus + .underline {
