--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -28,6 +28,9 @@ label {
   display: block;
   margin-bottom: 5px;
   color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .underline {
@@ -45,12 +48,17 @@ label {
   padding: 10px;
   font-size: 16px;
   border: 1.5px solid lightgrey;
-  border-radius: 50px;
+  border-radius: 12px;
   background-color: white;
   color: #333;
-  width: 200px;
+  width: 220px;
   outline: none;
+  transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 
+}
+.input:hover {
+  border: 1px solid lightgrey;
+  box-shadow: 0px 0px 10px -7px;
 }
 
 .input:focus + .underline {
