--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
     font-family: Lora, serif;
     margin: 0;
     padding: 0;
-    /*overflow-x: hidden; /* Evita rolagem horizontal */
-    overflow-y: hidden; /* Evita rolagem vertical */
+    overflow-x: hidden; /* Evita rolagem horizontal */
+    /* overflow-y: hidden;  Evita rolagem vertical */
     background-color: #ffffff; /* Adicionado para consistência */
 }
 
