--- a/css/popup-cadastro.css
+++ b/css/popup-cadastro.css
@@ -19,6 +19,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     margin: 20px;
+    /* width: 109px; */
 }
 
 /* Estilos do popup (modal) */
