--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -11,19 +11,19 @@
   display: grid;
   grid-template-columns: repeat(2, 600px);
   align-content: center;
-  gap: 20px;
-  justify-content: right; 
+  
+  justify-content: center; 
   /* align-content: end; */
-  position: fixed;
+  position: relative;
   top: 140px;
-  right: 320px;
+  
 }
 
 .dados-pessoais{
   display: grid;
     gap: 20px;
-    grid-template-columns: repeat(2, 285px);
-    right: 60px;
+    grid-template-columns: repeat(2, 300px);
+    left: 10%;
     top: 52px;
     /* align-content: end; */
     position: relative;
@@ -33,8 +33,8 @@
 .endereco{
   display: grid;
     gap: 20px;
-    grid-template-columns: repeat(2, 285px);
-    left: 820px;
+    grid-template-columns: repeat(2, 300px);
+    left: 130%;
     /* align-content: end; */
     position: relative;
     top: -410px;
@@ -55,7 +55,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin: 20px;
-    top:980px;
+    top: 90%;
 
 
 }
