--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -27,6 +27,7 @@
     top: 52px;
     /* align-content: end; */
     position: relative;
+    width: 100%;
 
 }
 
@@ -75,7 +76,7 @@ label {
 }
 
 .underline {
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 0;
@@ -103,7 +104,11 @@ label {
 }
 
 .input:focus + .underline {
-  width: 100%;
+  display: flex;
+  left: 10px;
+  width: 235px;
+  justify-content: center;
+  
 }
 
 @keyframes floating-label {
