--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -9,10 +9,9 @@
 
 .cadastrar-cliente{
   display: flex;
-  width: 50%;
-  /* align-content: center;
-  
-  justify-content: center;  */
+  flex-direction: column;
+  height: 1000px;
+  justify-content: center; 
   /* align-content: end; */
   position: relative;
   top: 140px;
@@ -26,7 +25,7 @@
     left: 10%;
     top: 52px;
     /* align-content: end; */
-    position: relative;
+    
     width: 100%;
 
 }
@@ -37,8 +36,8 @@
     grid-template-columns: repeat(2, 300px);
     left: 40%;
     /* align-content: end; */
-    position: relative;
-    top: 40%;
+    
+    
 
 }
 
