--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -13,10 +13,8 @@
   
   justify-content: center; 
   /* align-content: end; */
-  position: relative;
-  top: 140px;
-  left: 30%;
-  width: 800px;
+  
+  
   
 }
 
@@ -38,6 +36,7 @@
     grid-template-columns: repeat(2, 300px);
     left: 40%;
     /* align-content: end; */
+    margin-bottom: 50px;
     
     
 
@@ -45,9 +44,10 @@
 
 
 .botao-submit{
-  position: fixed;
-  top: 95%;
-  left: 90%;
+  position: relative;
+  top: 90%;
+  left: 100%;
+  width: 100px;
   display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
@@ -226,19 +226,44 @@ label {
   margin: auto;
 }
 
-/* foto */
-input[type="file"] {
-  padding: 10px;
-  border: 2px solid #4158D0;
-  border-radius: 4px;
-  background-color: white;
-  color: #333;
-  cursor: pointer;
-  outline: none;
-}
+/* Esconde o input de arquivo original */
+        input[type="file"] {
+            display: none;
+        }
 
-input[type="file"]:hover {
-  border-color: #301ef5;
-  background-color: #f0f0f0;
-}
+        /* Estilo para o botão de upload personalizado */
+        .custom-file-upload {
+            display: inline-block;
+            padding: 10px 20px;
+            cursor: pointer;
+            background-color: #0D3587;
+            color: white;
+            border-radius: 5px;
+            font-size: 16px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
 
+        .custom-file-upload:hover {
+            background-color: #0A2A6E;
+        }
+
+        /* Estilo para a área de visualização da imagem */
+        .image-preview {
+            width: 200px;
+            height: 200px;
+            border: 2px solid #0D3587;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            color: #999;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .image-preview img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Faz a imagem se ajustar ao tamanho da div sem distorcer */
+        }
