--- a/css/styleCadastro.css
+++ b/css/styleCadastro.css
@@ -6,9 +6,12 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden; /* Evita rolagem horizontal */
-    /* overflow-y: hidden;  Evita rolagem vertical */
      overflow-y: scroll; /* Evita rolagem vertical */
     background-color: #ffffff; /* Adicionado para consistência */
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 180px;
 }
 
 /* Estilos gerais do header */
