--- a/css/card-itens.css
+++ b/css/card-itens.css
@@ -41,7 +41,8 @@
   }
   
   .heading {
-    font-size: 17px; /* Tamanho da fonte reduzido em 2px */
+    font-size: 17
+    px; /* Tamanho da fonte reduzido em 2px */
     text-transform: capitalize;
     font-weight: 700;
   }
@@ -76,8 +77,17 @@
     display: block;
     margin: 0 auto;
     position: relative;
-    bottom: 20px;
+    /* bottom: 20px; */
     width: 100px;
     height: 100px;
   }
   
+  .img-card-acesso {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    bottom: 20px;
+    width: 65px;
+    height: 65px;
+    
+  }
