--- a/css/padrao-cadastro.css
+++ b/css/padrao-cadastro.css
@@ -45,8 +45,9 @@
 
 .botao-submit{
   position: relative;
-  top: 90%;
-  left: 100%;
+  height: 38.13px;
+  top: -1px;
+  left: 472px;
   width: 100px;
   display: inline-block;
     padding: 10px 20px;
@@ -57,23 +58,26 @@
     border-radius: 5px;
     cursor: pointer;
     margin: 20px;
-    top: 90%;
+    
 
 
 }
 .botao-back{
   position: relative;
+  height: 38.13px;
   width: 100px;
   display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: white;
-    background-color: #0D3587;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 20px;
-    top: 90%;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #0D3587;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 20px;
+  top: 76px;
+  right: -8px;
+  
 
 }
 
