--- a/css/cadastrar-veiculo.css
+++ b/css/cadastrar-veiculo.css
@@ -6,3 +6,26 @@
     gap: 20px;
     justify-content: center;
 }
+ /* Estilo básico para a lista de sugestões */
+ .suggestions {
+    max-height: 200px; /* Limita a altura máxima */
+    overflow-y: auto; /* Adiciona a barra de rolagem quando necessário */
+    border: 1px solid #ddd; /* Adiciona uma borda */
+    background-color: white; /* Fundo branco para as sugestões */
+    position: absolute; /* Posiciona a lista de sugestões */
+    z-index: 100; /* Para garantir que fique acima de outros elementos */
+    width: 100%; /* Garante que a lista tenha a mesma largura do input */
+    top: 100%; /* Posiciona a lista logo abaixo do input */
+    left: 0; /* Alinha a lista com o campo de input */
+    box-sizing: border-box; /* Para incluir bordas dentro da largura total */
+}
+.suggestions li {
+    padding: 10px;
+    cursor: pointer;
+}
+.suggestions li:hover {
+    background-color: #f0f0f0;
+}
+.prop {
+    position: relative; /* Necessário para o posicionamento correto da lista */
+}
