--- a/css/cadastrar-veiculo.css
+++ b/css/cadastrar-veiculo.css
@@ -29,3 +29,84 @@
 .prop {
     position: relative; /* Necessário para o posicionamento correto da lista */
 }
+
+.input-container {
+    position: flex;
+    margin: auto;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  
+  .underline {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #301ef5 0%, #00dbde 100%);
+    transition: width 0.3s;
+  }
+  
+  .input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1.5px solid lightgrey;
+    border-radius: 12px;
+    background-color: white;
+    color: #333;
+    width: 220px;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  
+  }
+  .input:hover {
+    border: 1px solid lightgrey;
+    box-shadow: 0px 0px 10px -7px;
+  }
+  
+  .input:focus + .underline {
+    display: flex;
+    left: 10px;
+    width: 235px;
+    justify-content: center;
+    
+  }
+  
+  @keyframes floating-label {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(-25px);
+      opacity: 0;
+    }
+  }
+  
+  .input:placeholder-shown + label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #777;
+    pointer-events: none;
+    transition: transform 0.3s, font-size 0.3s, color 0.3s;
+  }
+  
+  .input:focus:not(:placeholder-shown) + label {
+    transform: translateY(-25px);
+    font-size: 12px;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    animation: floating-label 0.3s forwards;
+  }
+  
