--- a/css/cadastro-servico.css
+++ b/css/cadastro-servico.css
@@ -1,4 +1,29 @@
-.servicos {
-    position: relative;
-    top: 250px;
+
+/* Formulário responsivo */
+form {
+    gap: 20px;
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative; /* Para garantir que elementos absolutos fiquem dentro do form */
+}
+
+/* Ajuste para centralizar os itens */
+form div {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Container para centralizar o formulário */
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Altura total da viewport */
+  background-color: #f0f0f0; /* Pode alterar o background se quiser */
+  margin: 0;
+  
 }
